--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
 
-spring.data.mongodb.uri=mongodb://localhost:27017/ProjetMongoDB
+!spring.data.mongodb.uri=mongodb://localhost:27017
 
+spring.data.mongodb.uri=mongodb://10.72.153.164:60000/ProjetMongoDB
